# srl-chat

./: .gitignore  Dockerfile  LICENSE.txt  README-LTI.md  README-technical.md  README.md  bot.py  develop.docker-compose.yml  docker-compose.yml  env.example  interview.puml  pyproject.toml  requirements.txt  system.puml
RAG/: embed_data.py  embed_strategies.py  evaluate_strategies.py  learning_strategies.json  strategies.csv  strategies_and_embeddings.csv
api/: .env.example  .flaskenv  Dockerfile  app_config.py  config.py  db_setup.py  db_setup_no_embed.py  lti.py  lti_app.py  lti_client.py  lti_provider.py  pyproject.toml  requirements.txt
api/app/: __init__.py  actions.py  core.py  enums.py  llm.py  logging_utlis.py  models.py  rag.py  routes.py  steps.py  test.py
api/app/config/: behaviours_de.json  behaviours_en.json  interview.json  learning_strategies.json  prompts.json  strategies.csv  strategies_de.csv  strategies_en.csv  translations.json
api/app/db_utils/: crud.py
api/certs/: chat-impact-fernuni-hagen-de.pem
api/migrations/versions/: 4106e2fdf568_delete_link_back_from_context.py  586d35dd0a91_add_separate_user_strategies_table.py  5c4b7b8bc45e_add_evaluation_table.py  66b3b32b60cd_allow_completed_contexts_to_be_nullable.py  721cac364a89_make_su_boolean.py  79cea741613e_add_current_context_to_conversation_.py  966da95e961d_add_back_current_context.py  a368af13b8cb_cascade_delete_user_conversation_.py  aa1eeade238b_multiple_joins_between_state_and_context.py  af267bb37cfc_user_unique_constraint.py  cfd2101d3327_make_context_and_strategy_nullable_in_.py  f0c885595069_update_user_strategies_table.py  f23183488e5d_add_timestamp_to_user_replies.py
api/setup/: db_setup.py
api/static/lti/: app-lazy.js  app-lazy.js.map  index.html
api/static/lti/core/: localstorage.js
api/tests/: conftest.py  test_strategy_detection.py
arch/: db.dbml  interview.puml  sequence.puml  system.puml  system_v1.puml
backend/: Dockerfile  api.py  dbinit.py  llm.py  pyproject.toml  schema.sql  translations.json
console/: console.py
discord/: .env.example  Dockerfile  bot.py  requirements.txt
docs/: .~lock.LearningStrategies_draft.docx#  .~lock.strategy_evaluation_wetchy_2025.xlsx#  LearningStrategies_draft.docx  strategy_evaluation_wetchy_2025.xlsx
flask_v2/: .env.example  README.md  config.py  requirements.txt  srl_chat_empty.db
frontend/: README.md  build-dev.sh  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
kubernetes/: api-deployment.yaml  api-service.yaml  bot-deployment.yaml  namespace.yaml  persistent-volume-claim.yaml
scripts/: docx_to_strategies_json.py  merge_tools_indicators.py
tests/: conftest.py  (+6 more)
(+94 files in other folders)
