[tool.poetry]
name = "srl-chat"
version = "0.1.0"
description = ""
authors = ["nise <niels.seidel@nise81.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-cors = "^5.0.1"
pylti1p3 = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
