[tool.poetry]
name = "srl-chat"
version = "0.1.0"
description = ""
authors = ["nise <niels.seidel@nise81.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-cors = "^5.0.1"
pylti1p3 = "^2.0.0"
dotenv = "^0.9.9"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
psycopg2 = "^2.9.11"
openai = "^2.24.0"
ollama = "^0.6.1"
numpy = "^2.4.2"
pgvector = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
